grammar.js
        document: $ => repeat($._node),

        doctype: $ => seq(
            '<!',
            alias($._doctype, 'doctype'),
            /[^>]+/,
            '>',
        ),

        _doctype: _ => /[Dd][Oo][Cc][Tt][Yy][Pp][Ee]/,

        _node: $ => choice(
            $.doctype,
            $.entity,
            $.text,
            $.element,
            $.script_element,
            $.style_element,
            $.erroneous_end_tag,
            $.comment,
        ),

        element: $ => choice(
            seq(
                $.start_tag,
                repeat($._node),
                choice($.end_tag, $._implicit_end_tag),
            ),
            $.self_closing_tag,
        ),

        script_element: $ => seq(
            alias($.script_start_tag, $.start_tag),
            optional($.raw_text),
            $.end_tag,
        ),

        style_element: $ => seq(
            alias($.style_start_tag, $.start_tag),
            optional($.raw_text),
            $.end_tag,
        ),

        start_tag: $ => seq(
            '<',
            alias($._start_tag_name, $.tag_name),
            repeat($._attributes),
            '>',
        ),

        _attributes: $ => choice(
             $.th_attribute, 
             $.attribute, 
        ),


        th_attribute_value: $ => $._th_std_expression, 

        self_closing_tag: $ => seq(
            '<',
            alias($._start_tag_name, $.tag_name),
            repeat($._attributes),
            '/>',
        ),

        end_tag: $ => seq(
            '</',
            alias($._end_tag_name, $.tag_name),
            '>',
        ),

        th_attribute: $ => seq(
            token(prec(PREC.TH_STD_EXPRESSION, 'th:')) ,
            choice(
                seq(field("attribute_name",$._th_generic), '=', '"', optional(field("attribute_value", $.th_attribute_value)), '"'),
                seq(field("attribute_name",$._th_spel_only), '=', '"', optional(field("attribute_value", $.spel_th_std_expression)),'"'),
                seq(field("attribute_name",$._th_assignation_sequence), '=', '"', optional(field("attribute_value", $.th_assignation_sequence)),'"'),
                seq(field("attribute_name",$.th_fragment), '=', '"',optional(field("attribute_value", $.th_fragment_declaration)),'"'),
                seq(field("attribute_name",$.th_inline), '=', '"', optional(field("attribute_value", $._th_inline_value)),'"'),
                seq(field("attribute_name",$.th_remove), '=', '"', optional(field("attribute_value", $._th_remove_value)),'"'),
                seq(field("attribute_name",$.th_each), '=', '"', optional(field("attribute_value", $.th_each_value)),'"'),
                seq(field("attribute_name",$._th_fragments_insert), '=', '"', optional(field("attribute_value", $._fragment_std_expression,)),'"'),
            ),
        ),

        attribute: $ => seq(
            $.attribute_name,
            optional(seq(
                '=',
                choice(
                    $.attribute_value,
                    $.quoted_attribute_value,
                ),
            )),
        ),

        attribute_name: _ => /[^<>"'/=\s]+/,


        _th_inline_value : $ => choice(
            $.inline_text,
            $.inline_javascript,
            $.inline_none
        ),

        _th_remove_value : $ => choice(
            $.remove_all,
            $.remove_body,
            $.remove_tag,
            $.remove_abf,
            $.remove_none,
        ),

        _th_generic: $ => choice(
            $.th_if,
            $.th_switch,
            $.th_case,
            $.th_unless,
            $.th_generic,
        ),

        _th_fragments_insert : $ => choice(
            $.th_insert,
            $.th_replace,
        ),

        _th_spel_only: $ => choice(
            $.th_object,
            $.th_with,
        ),

        _th_assignation_sequence : $ => choice(
            $.th_attr,
            $.th_attrappend,
            $.th_attrprepend,
        ),

        th_generic : $ => /[^<>"'/=\s]+/,

        attribute_value: _ => /[^<>"'=\s]+/,

        // An entity can be named, numeric (decimal), or numeric (hexacecimal). The
        // longest entity name is 29 characters long, and the HTML spec says that
        // no more will ever be added.
        entity: _ => /&(#([xX][0-9a-fA-F]{1,6}|[0-9]{1,5})|[A-Za-z]{1,30});?/,

        quoted_attribute_value: $ => choice(
            seq('\'', optional(alias(/[^']+/, $.attribute_value)), '\''),
            seq('"', optional(alias(/[^"]+/, $.attribute_value)), '"'),
        ),

        text: _ => /[^<>&\s]([^<>&]*[^<>&\s])?/,
        
        //Literals
        true_literal: _ => 'true',
        false_literal: _ => 'false',
        null_literal: _ => 'null',

        number_literal : _ => seq(
            /[0-9]+/,
            optional(seq(
                '.',
                /[0-9]+/,
            ))
        ),
        
        token_literal: _ => repeat1(
            seq(
                optional(/[\-\+]/),
                /[a-zA-Z\-_\.]+/,
            ),
        ),

        string_literal: $ => choice(
            $._interpreted_string_literal,
        ),

        interpolated_string_literal: $ => seq(
            "|",
            repeat(choice(
                $._interpolated_string_literal_basic_content,
                $.spel_th_std_expression,
                $.varselect_th_std_expression,
                $.message_th_std_expression,
                $.url_th_std_expression,
                '#',
                '@',
                '$',
                '*',
            )),
            "|",
        ),

        _interpreted_string_literal: $ => seq(
            "'",
            repeat(choice(
                $._interpreted_string_literal_basic_content,
                $._escape_sequence,
            )),
            "'",
        ),

        _interpreted_string_literal_basic_content: _ => token.immediate(prec(1, /[^'\\]+/)),

        _interpolated_string_literal_basic_content: _ => token.immediate(prec(1, /[^@|#~$*]+/)),

        _escape_sequence: _ => token.immediate(seq(
            '\\',
            /./
        )),

        greater_than: $ => '>',
        add: $ => '+',
        multiply: $ => '*',
        _th_std_expression: $ => choice(
            $.unary_th_std_expression,
            $.binary_th_std_expression,
            $.ternary_th_std_expression,
            $.parenthesized_th_std_expression,
            $._literal,
            $.spel_th_std_expression,
            $.varselect_th_std_expression,
            $.message_th_std_expression,
            $.url_th_std_expression,
            $.fragment_th_std_expression,
        ),

        fragment_th_std_expression : $ => seq(
            '~{',
            optional($._fragment_std_expression),
            '}',
        ),

        url_th_std_expression : $ => seq(
            '@{',
            optional($._url_std_expression),
            '}',
        ),

        message_th_std_expression : $ => seq(
            '#{',
            optional($._message_std_expression),
            '}',
        ),

        varselect_th_std_expression : $ => seq(
            '*{',
            optional($._spel_std_expression),
            '}',
        ),

        spel_th_std_expression : $ => seq(
            '${',
            optional($._spel_std_expression),
            '}',
        ),

        _url_std_expression : $ => seq(
            optional('/'),
            repeat(seq(
                choice(
                    $.standard_url_fragment,
                    $.parameterized_url_fragment
                ),
                '/'
            )),  
            choice(
                $.standard_url_fragment,
                $.parameterized_url_fragment
            ),
            optional('/'),
            optional(seq(
                '(',
                commaSep($.url_parameter_assignement),
                ')',
            ))
               
        ),

        _fragment_std_expression : $ => prec(PREC.FRAGMENT_EXPRESSION, seq(
            choice(
                $.standard_url,
                $._th_std_expression
            ),
            optional(seq(
                '::',
                $.fragment_call
            ))
        )),

        _message_std_expression : $ => seq(
            field("message", $.message_name),
            field("args", 
                optional(seq(
                    '(',
                        commaSep($._th_std_expression),
                    ')',
                ))
            )
        ),

        ternary_th_std_expression: $ => prec.right(PREC.TERNARY, seq(
            field('condition', $._th_std_expression),
            '?',
            field('consequence', $._th_std_expression),
            optional(seq(
                ':',
                field('alternative', $._th_std_expression)
            )),
        )),

        plus : _ => '+',
        minus : _ => '-',
        not : _ => choice('!', 'not'),

        unary_th_std_expression : $ => choice(...[
            [$.plus, PREC.UNARY],
            [$.minus, PREC.UNARY],
            [$.not, PREC.UNARY],
        ].map(([operator, precedence]) =>
            prec.left(precedence, seq(
                field('operator', operator),
                field('operand', $._th_std_expression)
            ))
        )),


        parenthesized_th_std_expression: $ => seq(
            '(',
            $._th_std_expression,
            ')',
        ),

        binary_th_std_expression: $ => choice(
            ...[
                [$.greater_than, PREC.REL],
                [$.lesser_than, PREC.REL],
                [$.greater_or_equal, PREC.REL],
                [$.lesser_or_equal, PREC.REL],
                [$.greater_than_2, PREC.REL],
                [$.lesser_than_2, PREC.REL],
                [$.greater_or_equal_2, PREC.REL],
                [$.lesser_or_equal_2, PREC.REL],
                [$.equal, PREC.EQUALITY],
                [$.equal_2, PREC.EQUALITY],
                [$.not_equal, PREC.EQUALITY],
                [$.not_equal_2, PREC.EQUALITY],
                [$.and, PREC.AND],
                [$.and_2, PREC.AND],
                [$.or, PREC.OR],
                [$.or_2, PREC.OR],
                [$.add, PREC.ADD],
                [$.substract, PREC.ADD],
                [$.multiply, PREC.MULT],
                [$.divide, PREC.MULT],
                [$.modulo, PREC.MULT],
            ].map(([operator, precedence]) =>
                prec.left(precedence, seq(
                    field('left', $._th_std_expression),
                    field('operator', operator),
                    field('right', $._th_std_expression)
                ))
            )),

        //spel 
        _spel_std_expression : $ => choice(
            $._spel_primary_expression,
            $.binary_spel_expression,
            $.java_ref,
            $.unary_spel_expression,
            $.ternary_spel_expression,
            $.elvis_expression,
            $._creation,
            $.spel_parenthesized_expression,
            $.spel_assignement_expression,
        ),

        spel_string_literal : $ => seq(
            "'",
            repeat(choice(
                $._interpreted_string_literal_basic_content,
                $._escape_sequence,
            )),
            "'",
            optional($._spel_post_accessor),
        ),

        _spel_post_accessor : $ => choice(
            $.spel_property_access,
            $.spel_method_access,
            $.spel_projection,
        ),
