test/corpus/standard-dialect.txt
================================================================================
TH Literals 
================================================================================

<div 
    th:text="true" 
    th:text="false" 
    th:text="'test'" 
    th:text="|test|" 
    th:text="123" 
    th:text="null" 
    th:text="test" 
    ></div>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (true_literal)))
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (false_literal)))
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (string_literal)))
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (interpolated_string_literal
            (interpolated_string_literal_basic_content))))
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (number_literal)))
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (null_literal)))
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (token_literal))))
    (end_tag
      (tag_name))))

================================================================================
TH Interpolated Strings 
================================================================================

<div th:text="|test ${'test'} test|" ></div>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (interpolated_string_literal
            (interpolated_string_literal_basic_content)
            (spel_th_std_expression
              (spel_string_literal))
            (interpolated_string_literal_basic_content)))))
    (end_tag
      (tag_name))))

================================================================================
TH Unary expressions
================================================================================

<div 
    th:text="-3"
    th:text="+3"
    th:text="!true"
    th:text="not true"
></div>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (unary_th_std_expression
            operator: (minus)
            operand: (number_literal))))
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (unary_th_std_expression
            operator: (plus)
            operand: (number_literal))))
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (unary_th_std_expression
            operator: (not)
            operand: (true_literal))))
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (unary_th_std_expression
            operator: (not)
            operand: (true_literal)))))
    (end_tag
      (tag_name))))


================================================================================
TH Binary expressions
================================================================================

<div th:text="(3 * (3+3*3)) + 'test'" ></div>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value 
          (binary_th_std_expression
            left: (parenthesized_th_std_expression
              (binary_th_std_expression
                left: (number_literal)
                operator: (multiply)
                right: (parenthesized_th_std_expression
                  (binary_th_std_expression
                    left: (number_literal)
                    operator: (add)
                    right: (binary_th_std_expression
                      left: (number_literal)
                      operator: (multiply)
                      right: (number_literal))))))
            operator: (add)
            right: (string_literal)))))
    (end_tag
      (tag_name))))

================================================================================
TH Ternary expressions
================================================================================

<div th:text="(3 * (3+3*3)) > -5 ? 'test1' : 'test' + '2'" ></div>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (ternary_th_std_expression
            condition: (binary_th_std_expression
              left: (parenthesized_th_std_expression
                (binary_th_std_expression
                  left: (number_literal)
                  operator: (multiply)
                  right: (parenthesized_th_std_expression
                    (binary_th_std_expression
                      left: (number_literal)
                      operator: (add)
                      right: (binary_th_std_expression
                        left: (number_literal)
                        operator: (multiply)
                        right: (number_literal))))))
              operator: (greater_than)
              right: (unary_th_std_expression
                operator: (minus)
                operand: (number_literal)))
            consequence: (string_literal)
            alternative: (binary_th_std_expression
              left: (string_literal)
              operator: (add)
              right: (string_literal))))))
    (end_tag
      (tag_name))))

================================================================================
TH URL expression
================================================================================

<a th:href="@{}"></a>
<a th:href="@{} + 'test'"></a>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (url_th_std_expression))))
    (end_tag
      (tag_name)))
  (element
    (start_tag 
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (binary_th_std_expression
            left: (url_th_std_expression)
            operator: (add)
            right: (string_literal)))))
    (end_tag
      (tag_name))))

================================================================================
TH SPEL Expression 
================================================================================

<a th:href="${}"></a>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (spel_th_std_expression))))
    (end_tag
      (tag_name))))

================================================================================
TH Varselect Expression 
================================================================================

<a th:href="*{}"></a>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (varselect_th_std_expression))))
    (end_tag
      (tag_name))))

================================================================================
TH Message Expression 
================================================================================

<a th:href="#{}"></a>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (message_th_std_expression))))
    (end_tag
      (tag_name))))

================================================================================
TH Fragment Expression 
================================================================================

<a th:href="~{}"></a>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (fragment_th_std_expression))))
    (end_tag
      (tag_name))))
